fixes menu margin clipping & remove comma -gulp

--- a/interface/client/styles/menu.import.less
+++ b/interface/client/styles/menu.import.less
@@ -212,6 +212,7 @@ aside.sidebar {
                 .see-all {
                     // display: none;
                     position: absolute;
+					margin-top: -4px;
                     top: @gridHeight * 10;
                     width: 100%;
                     // background-color: #FFF;
